--- a/SiteHtml.html
+++ b/SiteHtml.html
@@ -12,33 +12,30 @@
             <div class="container">
                 <header>
                     <h1 class="Titre">Accueil</h1>
-                    <h1 class="Titre" href="#exemple"><a href="#exemple">Support</a> </h1>
+                    <h1 class="Titre" href="#exemple"><a href="#exemple">Films📽️​</a></h1>
                 </header>
                 <section>
-                    <h2 class="cate">Catégories : </h2>
-                    <div class="chalet">
-                        <h3>Chalet</h3>
-                        <a href="2.Categorie Chalet.html"><img width="250" src="1.z chalet acceuil.jpeg" alt="Chalet en montagne"></a>
+                    <h2 class="">Films en tendances :</h2>
+                    <div class="">
+                        <h3></h3>
+                        <a href=""><img width="250" src="" alt=""></a>
                     </div>
-                    <div class="piscine">
-                        <h3>Piscine</h3>
-                        <a href="3.Categorie Piscine.html"><img width="250" src="1.z Maison avec psicine acceuil.jpeg" alt="Maison avec piscine"></a>
+                    <div class="">
+                        <h3></h3>
+                        <a href=""><img width="250" src="" alt=""></a>
                     </div>
-                    <div class="appart">
-                        <h3>Appartement</h3>
-                        <a href="4.Categorie appartement.html"><img width="250" src="1.z appart acceuil.jpeg" alt="photo d'appartement"></a>
+                    <div class="">
+                        <h3></h3>
+                        <a href=""><img width="250" src="" alt=""></a>
                     </div>
-                    <div class="Insolite">
-                        <h3>Insolite</h3>
-                        <a href="5.Categorie Insolite.html"><img width="250" src="1.z maison insolite acceuil.jpeg" alt="Maison insolite"></a>
+                    <div class="">
+                        <h3></h3>
+                        <a href=""><img width="250" src="" alt=""></a>
                     </div>
                 </section>
-                <section class="support">
-                    <h2 id="exemple">Contactez nous ?</h2>
-                    <p>Alors appuyez en dessous !</p>
-                    <a class="bouton" href="6.page supprt.html">Support</a>
-                </section>
+                <a class="bouton">Plus de Films ?</a>
             </div>
         </div>
+        <script type="" src=""></script>
     </body> 
 </html>
