--- a/acceuil.html
+++ b/acceuil.html
@@ -12,23 +12,15 @@
         <div class="container">
             <header>
                 <h1 class="Titre">Accueil</h1>
-                <h1 class="Titre"><a href="#exemple">Films📽️​</a></h1>
+                <h1 class="Titre"><a href="#exemple">Recherche De Films📽️​</a></h1>
             </header>
             <section>
                 <h2>Films en tendances :</h2>
-                <div id="filmcontainer"></div>
-                <button id="Plus">Voir plus</button>
+                <div id="filmsContainer"></div>
             </section>
         </div>
     </div>
+    <button id="Plus">Voir plus</button>
     <script src="javas_acceuil.js"></script>
-</body>
-</html>
-
-
-<body>
-    <div id="filmsContainer"></div>
-    <button id="loadMoreBtn">Voir plus</button>
-    <script src="script.js"></script>
 </body>
 </html>
