--- a/acceuil.html
+++ b/acceuil.html
@@ -11,8 +11,9 @@
     <div class="overlay">
         <div class="container">
             <header>
-                <h1 class="Titre">Accueil</h1>
-                <h1 class="Titre"><a href="#exemple">Recherche De Films📽️​</a></h1>
+                <div class="photo"> <img width="150" src="logo.jpg" alt="logo de l'entreprise CineNow"></div>
+                <h1 class="acceuil">Accueil</h1>
+                <h1 class="Titre"><a href="search.html">Recherche De Films📽️​</a></h1>
             </header>
             <section>
                 <h2>Films en tendances :</h2>
