--- a/movie.html
+++ b/movie.html
@@ -1,41 +1,25 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UFT-8" >
-        <title>CinéNow</title>
-        <link rel="stylesheet" href="">
-        <link rel="icon" href="">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head> 
-    <body>
-        <div class="overlay">
-            <div class="container">
-                <header>
-                    <h1 class="Titre">Accueil</h1>
-                    <h1 class="Titre" href="#exemple"><a href="#exemple">Films📽️​</a></h1>
-                </header>
-                <section>
-                    <h2 class="">Films en tendances :</h2>
-                    <div class="">
-                        <h3></h3>
-                        <a href=""><img width="250" src="" alt=""></a>
-                    </div>
-                    <div class="">
-                        <h3></h3>
-                        <a href=""><img width="250" src="" alt=""></a>
-                    </div>
-                    <div class="">
-                        <h3></h3>
-                        <a href=""><img width="250" src="" alt=""></a>
-                    </div>
-                    <div class="">
-                        <h3></h3>
-                        <a href=""><img width="250" src="" alt=""></a>
-                    </div>
-                </section>
-                <a class="bouton">Plus de Films ?</a>
-            </div>
+<head>
+    <meta charset="UTF-8">
+    <title>CinéNow</title>
+    <link rel="stylesheet" href="cssMovie.css">
+    <link rel="icon" href="icone-Photoroom.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+    <div class="overlay">
+        <div class="container">
+            <header>
+                <div class="photo"> <img width="150" src="logo.jpg" alt="logo de l'entreprise CineNow"></div>
+                <a href="acceuil.html"></a><h1 class="acceuil">Accueil</h1></a>
+                <h1 class="Titre"><a href="search.html">Recherche De Films📽️​</a></h1>
+            </header>
+            <section>
+                <div id="filmDetails"></div>
+            </section>
         </div>
-        <script type="" src=""></script>
-    </body> 
+    </div>
+    <script src="javaMovie.js"></script>
+</body>
 </html>
