--- a/movie.html
+++ b/movie.html
@@ -15,6 +15,13 @@
                 <a href="acceuil.html"></a><h1 class="acceuil">Accueil</h1></a>
                 <h1 class="Titre"><a href="search.html">Recherche De Films📽️​</a></h1>
             </header>
+            <div id="film"></div>
+            <div id="affiche"></div>
+            <div id="plot"></div>
+            <div id="acteurs"></div>
+            <div id="genre"></div>
+            <div id="notes"></div>
+            <section>
             <section>
                 <div id="filmDetails"></div>
             </section>
