--- a/movie.html
+++ b/movie.html
@@ -8,25 +8,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div class="overlay">
-        <div class="container">
-            <header>
-                <div class="photo"> <img width="150" src="logo.jpg" alt="logo de l'entreprise CineNow"></div>
-                <a href="acceuil.html"></a><h1 class="acceuil">Accueil</h1></a>
-                <h1 class="Titre"><a href="search.html">Recherche De Films📽️​</a></h1>
-            </header>
-            <div id="film"></div>
-            <div id="affiche"></div>
-            <div id="plot"></div>
-            <div id="acteurs"></div>
-            <div id="genre"></div>
-            <div id="notes"></div>
-            <section>
-            <section>
-                <div id="filmDetails"></div>
-            </section>
-        </div>
+    <header>
+        <div class="photo"> <img width="150" src="logo.jpg" alt="logo de l'entreprise CineNow"></div>
+        <a href="acceuil.html"><h1 class="acceuil">Accueil</h1></a>
+        <h1 class="Titre"><a href="search.html">Recherche De Films📽️​</a></h1>
+    </header>
+    <div id="film"></div>
+    <div id="affiche"></div>
+    <div id="txt">
+        <div id="plot"></div>
+        <div id="acteurs"></div>
+        <div id="genre"></div>
+        <div id="notes"></div>
     </div>
+    <section>
+        <div id="filmDetails"></div>
+    </section>
+       
+    
     <script src="javaMovie.js"></script>
 </body>
 </html>
