--- a/search.html
+++ b/search.html
@@ -14,11 +14,12 @@
         <h1 class="Titre"><a>Recherche De Films📽️​</a></h1>
     </header>
     <section>
-        <label for="site-search">Rehercher un Film </label>
-        <input type="search" id="site-search" name="q" />
-        <button>Rechercher</button>
+        <input type="search" id="site-search" name="q" class="cherche"/>
+        <button class="button">Rechercher</button>
+        
         <div id="filmsContainer"></div>
     </section>
+    <button id="PageSuivante">Plus de Films<button>
     <script src="Javassearch.js"></script>
 </body>  
 </html>
